<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity">Udacity</string>
    <string name="adress">2465 Latham St,</string>
    <string name="adress2">Mountain View, CA 94043</string>
    <string name="number">650-555-5555</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="adresss">Adress</string>
    <string name="company_name">Company Name</string>
    <string name="leave_a_comment">Leave a comment</string>
</resources>
