<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/uda" />


    <TableLayout
        android:id="@+id/textContainer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="1"
        android:padding="16dp">

        <TableRow>
            <TextView
                android:padding="4dp"
                android:text="@string/company_name"
                android:textStyle="bold" />
            <TextView
                android:padding="4dp"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/udacity"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="4dp"
                android:text="@string/adresss"
                android:textStyle="bold"  />
            <TextView
                android:padding="4dp"
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="4dp"
                android:text=""
                android:textStyle="bold"  />
            <TextView
                android:padding="4dp"
                android:id="@+id/adress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress2"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="4dp"
                android:text="@string/contact"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:padding="4dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="4dp"
                android:text="@string/website"
                android:textStyle="bold" />
            <TextView
                android:padding="4dp"
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="www.udacity.com"
                android:autoLink="web"
                />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/leave_a_comment"

        />


</LinearLayout>
